clusters/development/frontend/portal-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: portal
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: ghcr.io/hm-edu/portal-frontend:main-256ac52-1659574669 # {"$imagepolicy": "flux-system:frontend"}
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: portal
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
