clusters/development/frontend/portal-frontend-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portal
  labels:
    istio-injection: enabled
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: portal-mtls
  namespace: portal
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-prod
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: portal-cert
    hosts:
    - "my.hmtest.de"
    - "domain.api.hmtest.de"
    - "pki.api.hmtest.de"
    - "eab.api.hmtest.de"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: portal
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: portal
spec:
  hosts:
  - my.hmtest.de
  gateways:
  - istio-system/gateway-prod
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
